    - Don't attempt to migrate pid 1 itself when migrating cgroups for started
      units; works around some not yet understood cgproxy/systemd interaction.
      This particularly unbreaks cgproxy in LXC. (LP: #1491557)
    - Lower Breaks: to plymouth version which has the udev inotify fix in
      Ubuntu.
    - Change systemd-sysv's conflicts to upstart-sysv. (LP: #1422681)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 13 Nov 2015 08:45:51 +0100

systemd (228-1) unstable; urgency=medium

  [ Martin Pitt ]
  * New upstream release:
    - Fix journald killing by watchdog. (Closes: #805042)
    - Drop check for /etc/mtab. (Closes: #802025)
    - Follow unit file symlinks in /usr, but not /etc when looking for
      [Install] data, to avoid getting confused by Aliases. (Closes: #719695)
    - journalctl: introduce short options for --since and --until.
      (Closes: #801390)
    - journald: Never accept fds from file systems with mandatory locking.
      (LP: #1514141)
    - Put nspawn containers in correct slice. (LP: #1455828)
  * Cherry-pick some networkd fixes from trunk to fix regressions from 228.
  * debian/rules: Configure with --as-needed to avoid unnecessary binary
    dependencies.
  * systemd-networkd-resolvconf-update.service: Increase StartLimitBurst, as
    this might be legitimately called several times in quick succession. If
    that part of the "networkd" autopkgtest fails, show the journal log for
    that service for easier debugging.
  * debian/tests/boot-and-services: Add test case for systemd-coredump.
  * Add systemd-coredump postinst/prerm to enable/disable this without a
    reboot.
  * debian/tests/networkd: Check for systemd-networkd-wait-online in /usr as
    well, for usage in other distros.
  * debian/tests/logind: Skip suspend test if the kernel does not support
    suspend.
  * debian/tests/logind: Split tests into functions.
  * debian/tests/boot-and-services: Ignore failures of console-setup.service,